CSS fixes for landscape on small devices

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -73,3 +73,16 @@
   margin: 20px auto;
 }
 }
+
+@media screen and (max-height: 450px) {
+.teacher-card-square.mdl-card {
+  width: 256px;
+  height: 128px;
+  margin: 10px auto;
+    position:fixed;
+  top: 50%;
+  left: 50% ;
+  margin-left:-128px;
+  margin-top:-64px;
+}
+}
